# LazyLlama

./: CONTIBUTIONS_WISHLIST.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  start.bat  start.ps1  start.sh
lazy_llama/: __init__.py  benchmark.py  bootstrap.py  config.py  dashboard_server.py  e8_quantize.py  endless_rl.py  kv_compressor.py  lazy_distill.py  lazy_infer.py  lazy_model_manager.py  lazy_prune.py  lazy_speculative.py  lazy_tui.py  lazytorch_core.py  metrics_store.py  micro_moe.py  model_merging.py  utils.py  zero_shot_compensation.py
