[build-system]
requires = [
    "setuptools>=65.0",
    "wheel",
    "packaging>=24.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "numpy>=1.26.0,<3.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "lazy_llama"
version = "3.6.0"
description = "Low‑end inference engine with distillation, pruning, E8 quantization, KV compression, LazyTorch memory-mapped loading, and Endless RL self‑improvement"
# readme = "README.md"   # Commented out to avoid warning; create README.md if needed
authors = [
    {name = "Lazy Llama Team", email = "team@lazy-llama.ai"},
]
license = "MIT"   # Replaced table with simple SPDX string
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "torch>=2.0.0,<3.0.0",
    "transformers>=4.35.0,<5.0.0",
    "accelerate>=0.25.0,<1.0.0",
    "peft>=0.7.0,<1.0.0",
    "flask>=2.3.0,<3.0.0",
    "flask-cors>=4.0.0,<5.0.0",
    "huggingface-hub>=0.22.0,<0.30.0",
    "psutil>=5.9.0,<6.0.0",
    "rich>=13.7.0,<14.0.0",
    "textual>=0.41.0,<1.0.0",
    "markdown>=3.5.0,<4.0.0",
    "requests>=2.31.0,<3.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "numpy>=1.26.0,<3.0.0",
    "sentencepiece>=0.2.0,<0.3.0",
    "protobuf>=3.20.0,<5.0.0",
    "nltk>=3.8.1,<4.0.0",
    "packaging>=24.0,<25.0",
    "tokenizers>=0.19.0,<0.21.0",
    "safetensors>=0.3.0,<0.5.0",
    "pandas>=2.0.0,<3.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
]

[project.optional-dependencies]
gpu = [
    "bitsandbytes>=0.41.0,<0.50.0",
    "cuda-python>=12.0,<13.0",
]
gguf = [
    "llama-cpp-python>=0.2.27,<0.3.0",
]
ollama = [
    "ollama>=0.1.0,<0.2.0",
]
dev = [
    "pytest>=7.0,<8.0",
    "black>=23.0,<24.0",
    "flake8>=6.0,<7.0",
    "mypy>=1.0,<2.0",
]
all = [
    "bitsandbytes>=0.41.0,<0.50.0",
    "cuda-python>=12.0,<13.0",
    "llama-cpp-python>=0.2.27,<0.3.0",
    "ollama>=0.1.0,<0.2.0",
    "pytest>=7.0,<8.0",
    "black>=23.0,<24.0",
    "flake8>=6.0,<7.0",
    "mypy>=1.0,<2.0",
]

[project.scripts]
lazyllama = "lazy_llama.bootstrap:main"

# ---- Removed explicit package-dir mapping; using 'where' to locate source ----
[tool.setuptools.packages.find]
where = ["lazy_llama"]          # look inside this folder for packages
include = ["lazy_llama", "lazy_llama.*"]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
lazy_llama = [
    "templates/*.html",
    "static/*",
    "py.typed",
]
